--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.17.2",
+    "express-validation": "^3.0.8",
+    "express-validator": "^6.14.0",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.15",
     "passport": "^0.5.1",
